--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@heroicons/react": "^2.0.17",
     "autoprefixer": "^10.4.14",
     "classnames": "^2.3.2",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.4",
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
